style.css
@import url('https://fonts.googleapis.com/css2?family=Cabin:wght@400;600&family=Open+Sans&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Rowdies:wght@400;700&display=swap');


body {
    text-align: center;
    background-color: rgb(29,29,29);
    margin: 0;
    padding: 0;
    font-family: "Open Sans", sans-serif;
}

section {
    margin: 18em 0 5em;
}

 /* refactor section */
.nav-link-1, header p, .about-1 p, .myskills p, .contact p, .work-1 p, .work p {
    color: rgb(131,131,131);
}

.about-1, .navbar-1, .screen2_menu_items, .nav-item-1,  footer {
    background-color: rgb(24,24,24);
}

header h1, .About h2, .myskills h1, h2, .contact h1, .work-1 h3, .work h2, .work-btn {
    font-family: "Rowdies", sans-serif;
}
.contact p, header p, .work-1 p, .about-1 p, .myskills p, .work p, .contact-btn, .header-btn,  footer p{
    font-family: 'Cabin', sans-serif;
}

.nav-link-1, header h1, .About h2, .work-1 h3, .work h2 {
    font-weight: 400;
}

.About h2, .myskills h1, h2, .contact h1 {
    text-transform: uppercase;
}

header h1, .header-icons, .contact-btn, .header-btn, .About h2, .work-1 h3, .myskills h1, .work-icon, h2, .contact h1, .work h2, footer p, .footer-icons {
    color: #fff;
}

.nav-item-1 hr, .var-line {
    background: #fff;
}

/* nav section */
.navbar-1 {
    width: 10%;
    height: 100%;
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
    padding-top:0;
}

.nav-item-1  {
    list-style: none;
    padding-top: 3em;
}

.nav-link-1 {
    font-size: 0,8em;
    text-decoration: none;
    padding-top: 2em;
    font-family: sans-serif;
}

.nav-link-1:hover {
    color: rgb(40,167,69);
    text-decoration: none;
}

.nav-image img {
    width: 120px;
    height: 160px;
}

.screen2_menu_btn{
    width: 100%;
}

.screen2_menu_btn input{
    display: none;
} 

/* header section */
header h1 {
    font-size: 5.4em;
    text-align: left;
    margin: 1.6em 0 0 2em;
}

header p {
    font-size: 1.8em;
    text-align: left;
    margin: 1.6em 0 0 6em;
}

.header-image {
    display: none;
}

.header-btn {
    font-size: 0.8em;
    padding: 1em 5em;
    position: relative;
    top: 4em;
    right: 32em;
}

.var-line {
    height: 4em;
    display: block;
    width: 0.3px;
    position: absolute;
    right: 10px;
    margin-top: 1em;
}

.icons {
    position: absolute;
    right: 20px;
    top: 25em;
    position: fixed;
}

.header-icons {
    font-size: 20px;
    display: flex;
    flex-direction: row;
    padding-top: 1em;
}

.header-icons:hover {
    color: rgb(40,167,69);
}

/* about section */
.About h2 {
    font-size: 3em;
    margin:0 14em 2em 0;
}

.about-1 {
    padding: 2em;
    border: 5px solid rgb(40,167,69);
    border-radius: 2em;
    width: 60%;
}

.about-1 p {
    font-size: 1.2em;
    text-align: left;
    margin-top: 1em;
}

/* myskills section */
.myskills h1, h2 {
    font-size: 2em;
    padding: 1em;
}

.myskills p {
    font-size: 1.2em;
}

/* work section */

.work h2 {
    font-size: 2em;
}

.work p {
    font-size: 1.4em;
}

.work-1 {
    height: 60%;
    text-align: left;
    box-sizing: border-box;
    margin: 6em  0 3em 6em;
}

.work-1 h3 {
    font-size: 1.8em;
    padding-top: 0;
    line-height: 74px;
}

.work-1 p {
    font-size: 1.2em;
}

.work-icon {
    font-size: 1.5em;
}

.work-btn {
    margin: 0.8em 1em 0 0;
    font-size: 0.9em;
    padding: 1.3em 3em;
}

.work-1 img {
    width: 500px;
    height: 400px;
    padding: 1em;
    border-radius: 3em;
}

.img-frist {
    padding-left: 0;
}

.img-frist img {
    padding-left: 0;
}

/* contact section */
.contact {
    margin-bottom: 13em;
}

.contact h1 {
    font-size: 2em;
}

.contact p {
    font-size: 1em;
}

.contact-btn {
    font-size: 0.8em;
    margin: 2em;
    padding: 1em 5em;
}

/* footer section */
 footer {
     height: 3em;
     padding-top: 1em;
 }
.footer-icons {
    display: none;
}

footer p {
    margin: 0;
}




@media (max-width: 965px) {

    .header-btn, .contact-btn {
        background-color:  rgb(40,167,69);
    }

    section {
        margin: 10em 0 5em;
    }

    /* navbar section */
    .navbar-1 {
        display: none;
    }


/* header section */
header h1 {
    font-size: 2em;
    text-align: center;
    margin-top: 1em; 
    margin-left: 0;
}

header p {
    font-size: 1.2em;
    text-align: center;
    margin-top: 0.5em;
    margin-left: 0;
}

.header-btn {
    position: initial;
    margin-top: 0.7em;
}

.header-image {
    display: block;
}

.header-image img {
    width: 200px;
    height: 200px;
    border: 1px solid #fff;
    border-radius: 100px;
    align-items: center;
    margin-top: 3em;
}

.icons  {
    display: none;
}


/* about section */
.About h2 {
    font-size: 2em;
    margin-bottom:1.5em;
    margin-right: 0;
}

.about-1 {
    padding: 1em;
    border: 2px solid rgb(40,167,69);
    width: 90%;
}


.about-1 p {
    font-size: 1.2em;
    text-align: left;
    margin-top: 1em;
}

/* myskills section */
.myskills h1, h2 {
    font-size: 1.5em;
    padding: 0.8em;
}

.myskills p {
    font-size: 1em;
}

/* work section */

.work h3 {
    margin-top: 2em;
}

.work p {
    font-size: 1.2em;
}

.work-1 {
    height: 50%;
    text-align: center;
    margin: 0;
}

.work-1 h3 {
    font-size: 1.6em;
    line-height: 2em;
}

.work-1 p {
    font-size: 1em;
}

.work-btn {
    margin: 0.8em 0.6em;
    font-size: 0.9em;
    padding: 0.7em 2em;
}

.work-1 img {
    display: none;
}

/* contact section */
.contact {
    margin-bottom: 9em;
}

.contact-btn {
    margin: 0;
}

/* footer section */
footer {
    height: 7em;
    padding-top: 1em;
}

.footer p {
   font-size: 0.2em;
   margin: 0;
}

.footer-icons {
    display: inline-block;
    text-align: center;
    font-size: 20px;
    padding: 0.4em;
}

.footer-icons:hover {
    color: rgb(40,167,69);
}

}

@media (max-width: 425px) {
    /* about section */
    .about-1 img {
        display: none;
    }
}

@media (max-width: 575px) {
    /* about section */
    .about-1 p {
        text-align: center;
    }
}

@media (min-width: 576px) and (max-width: 768px) {
        /* about section */
        .about-1 img {
            margin-top: 3em;
        }
}


@media (min-width: 969px) and (max-width: 1024px) {
/* header section */
.header-btn {
    position: relative;
    right: 20em;
}
/* about section */
.About h2 {
    font-size: 2em;
    margin-bottom:1.5em;
    margin-right: 18em;
    padding-top: 5em;
}

.about-1 {
    padding: 1em;
    width: 60%;
}

.about-1 p {
    text-align: left;
}

/* myskills section */
.myskills h2 {
    padding-top: 5em;
}

.myskills h1 {
    font-size: 1.7em;
    padding: 1em;
}

.myskills p {
    font-size: 1.4em;
}

    /* work section */

    .work p {
        font-size: 1.6em;
    }
    
    .work-1 {
        height: 50%;
        text-align: center;
        margin: 0;
    }
    
    .work-1 h3 {
        font-size: 1.8em;
        line-height: 2em;
    }
    
    .work-1 p {
        padding: 0.8em 4em;
    }
    
    .work-btn {
        margin: 0.8em 0.6em;
        font-size: 1em;
        padding: 1em 3em;
    }
    
    .work-1 img {
        display: none;
    }
    

}

@media (min-width: 1440px) {
    .header-btn {
        right: 36em;
    }
}

@media (min-width: 1200px) {
/* animation section */
.reveal.active {
    opacity: 1;
  }
  .active.fade-bottom {
    animation: fade-bottom 1s ease-in;
  }
  .active.fade-left {
    animation: fade-left 1s ease-in;
  }
  .active.fade-right {
    animation: fade-right 1s ease-in;
  }
  @keyframes fade-bottom {
    0% {
      transform: translateY(50px);
      opacity: 0;
    }
    100% {
      transform: translateY(0);
      opacity: 1;
    }
  }
  @keyframes fade-left {
    0% {
      transform: translateX(-100px);
      opacity: 0;
    }
    100% {
      transform: translateX(0);
      opacity: 1;
    }
  }
  
  @keyframes fade-right {
    0% {
      transform: translateX(100px);
      opacity: 0;
    }
    100% {
      transform: translateX(0);
      opacity: 1;
    }
  }
}

